made a slight modification

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="side-bar">
             <button class="reset-page">Shake the Etch</button>
             <!-- <input type="number"> -->
-            <button onclick="getInput()">get input</button>
+            <!-- <button onclick="getInput()">get input</button> -->
         </div>
         <div class="container"></div>
     </div>
